# fclists

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
fclists/: hooks.py  modules.txt  nav_options.py  patches.txt  periods.py  setup.py
fclists/config/: desktop.py  docs.py
fclists/desktop_icon/: fclists.json
fclists/fclists/report/fclist_account/: fclist_account.js  fclist_account.json  fclist_account.py
fclists/fclists/report/fclist_bank_reconciliation_queue/: fclist_bank_reconciliation_queue.js  fclist_bank_reconciliation_queue.json  fclist_bank_reconciliation_queue.py
fclists/fclists/report/fclist_batch_expiry/: fclist_batch_expiry.js  fclist_batch_expiry.json  fclist_batch_expiry.py
fclists/fclists/report/fclist_best_sellers/: fclist_best_sellers.js  fclist_best_sellers.json  fclist_best_sellers.py
fclists/fclists/report/fclist_cost_adjustment/: fclist_cost_adjustment.js  fclist_cost_adjustment.json  fclist_cost_adjustment.py
fclists/fclists/report/fclist_customer_balance/: fclist_customer_balance.js  fclist_customer_balance.json  fclist_customer_balance.py
fclists/fclists/report/fclist_duplicate_items/: fclist_duplicate_items.json  fclist_duplicate_items.py
fclists/fclists/report/fclist_gl/: fclist_gl.js  fclist_gl.json  fclist_gl.py
fclists/fclists/report/fclist_held_documents/: fclist_held_documents.js  fclist_held_documents.json  fclist_held_documents.py
fclists/fclists/report/fclist_item_stock/: fclist_item_stock.js  fclist_item_stock.json  fclist_item_stock.py
fclists/fclists/report/fclist_open_invoices/: fclist_open_invoices.js  fclist_open_invoices.json  fclist_open_invoices.py
fclists/fclists/report/fclist_payment_summary/: fclist_payment_summary.js  fclist_payment_summary.json  fclist_payment_summary.py
fclists/fclists/report/fclist_payments/: fclist_payments.js  fclist_payments.json  fclist_payments.py
fclists/fclists/tests/: test_fclists.py
fclists/fixtures/: dashboard.json  dashboard_chart.json  number_card.json  workspace_sidebar.json
fclists/public/js/: account_list.js  batch_list.js  customer_list.js  fclists_lib.js  fclists_periods.js  item_list.js  pos_invoice_list.js  purchase_invoice_list.js  sales_invoice_list.js  supplier_list.js
fclists/scripts/: _verify_fclists.py
fclists/www/: fclists-guide.html  fclists-guide.py
(+40 files in other folders)
